<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".conso.ConsommationFragment"
    android:background="@color/white">

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_jour"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="130dp"
        android:text="@string/aujourdhui"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_semaine"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/cette_semaine"
        app:layout_constraintTop_toBottomOf="@id/button_jour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_mois"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/ce_mois"
        app:layout_constraintTop_toBottomOf="@id/button_semaine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_prod_conso"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="60dp"
        android:text="@string/produits_consommes"
        app:layout_constraintTop_toBottomOf="@id/button_mois"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>